--- a/src/assets/css/el-index.less
+++ b/src/assets/css/el-index.less
@@ -7,12 +7,12 @@
     border: 0 !important;
     color: @Fcolour !important;
     &:hover {
-      color: @Ncolour !important;
+      color: @Ccolour !important;
     }
   }
   .is-active {
     border: 0 !important;
-    color: @Ncolour !important;
+    color: @Ccolour !important;
   }
   .el-submenu {
     .el-submenu__title {
@@ -34,11 +34,11 @@
       }
       .el-tabs__item {
         &:hover {
-          color: @Ncolour;
+          color: @Ccolour;
         }
       }
       .is-active {
-        color: @Ncolour;
+        color: @Ccolour;
       }
       &::after {
         height: 1px;
@@ -55,7 +55,7 @@
       height: 32px;
       width: 150px;
       &:focus {
-        border-color: @Ncolour !important;
+        border-color: @Ccolour !important;
       }
 
     }
@@ -77,7 +77,7 @@
         height: 30px;
       }
       .selected {
-        color: @Ncolour;
+        color: @Ccolour;
       }
     }
   }
@@ -170,8 +170,8 @@
 
 .is-checked {
   .el-switch__core {
-    border-color: @Ncolour !important;
-    background-color: @Ncolour !important;
+    border-color: @Ccolour !important;
+    background-color: @Ccolour !important;
   }
 }
 
@@ -181,7 +181,7 @@
   height: 50px;
   .el-pager {
     .active {
-      background-color: @Ncolour !important;
+      background-color: @Ccolour !important;
     }
   }
 }
@@ -326,15 +326,15 @@
   }
   .is-checked {
     .el-radio__inner {
-      border-color: @Ncolour !important;
-      background: @Ncolour !important;
+      border-color: @Ccolour !important;
+      background: @Ccolour !important;
     }
   }
 }
 
 .is-checked {
   .el-radio__label {
-    color: @Ncolour !important;
+    color: @Ccolour !important;
   }
 }
 
