--- a/src/assets/css/el-index.less
+++ b/src/assets/css/el-index.less
@@ -272,7 +272,7 @@
         label {
           width: auto;
           .fCN {
-            color: #5daf34;
+            color: #608FFF;
           }
         }
       }
